; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_ucma.c_ucma_get_ctx_dev.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_ucma.c_ucma_get_ctx_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucma_context = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.ucma_file = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ucma_context* (%struct.ucma_file*, i32)* @ucma_get_ctx_dev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ucma_context* @ucma_get_ctx_dev(%struct.ucma_file* %0, i32 %1) #0 {
  %3 = alloca %struct.ucma_context*, align 8
  %4 = alloca %struct.ucma_file*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ucma_context*, align 8
  store %struct.ucma_file* %0, %struct.ucma_file** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ucma_file*, %struct.ucma_file** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.ucma_context* @ucma_get_ctx(%struct.ucma_file* %7, i32 %8)
  store %struct.ucma_context* %9, %struct.ucma_context** %6, align 8
  %10 = load %struct.ucma_context*, %struct.ucma_context** %6, align 8
  %11 = call i64 @IS_ERR(%struct.ucma_context* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load %struct.ucma_context*, %struct.ucma_context** %6, align 8
  store %struct.ucma_context* %14, %struct.ucma_context** %3, align 8
  br label %30

15:                                               ; preds = %2
  %16 = load %struct.ucma_context*, %struct.ucma_context** %6, align 8
  %17 = getelementptr inbounds %struct.ucma_context, %struct.ucma_context* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %28, label %22

22:                                               ; preds = %15
  %23 = load %struct.ucma_context*, %struct.ucma_context** %6, align 8
  %24 = call i32 @ucma_put_ctx(%struct.ucma_context* %23)
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  %27 = call %struct.ucma_context* @ERR_PTR(i32 %26)
  store %struct.ucma_context* %27, %struct.ucma_context** %3, align 8
  br label %30

28:                                               ; preds = %15
  %29 = load %struct.ucma_context*, %struct.ucma_context** %6, align 8
  store %struct.ucma_context* %29, %struct.ucma_context** %3, align 8
  br label %30

30:                                               ; preds = %28, %22, %13
  %31 = load %struct.ucma_context*, %struct.ucma_context** %3, align 8
  ret %struct.ucma_context* %31
}

declare dso_local %struct.ucma_context* @ucma_get_ctx(%struct.ucma_file*, i32) #1

declare dso_local i64 @IS_ERR(%struct.ucma_context*) #1

declare dso_local i32 @ucma_put_ctx(%struct.ucma_context*) #1

declare dso_local %struct.ucma_context* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
